--- a/index.html
+++ b/index.html
@@ -2692,11 +2692,12 @@ function createLayerControlContainer() {
   container.style.display = 'block'; // Show by default when created
 
   container.innerHTML = `
-    <div style="padding:18px 18px 10px 18px; background:#fff; border-radius:14px 14px 0 0; border-bottom:1px solid #eee; display:flex;align-items:center;justify-content:space-between;">
-      <span style="font-size:1.3em;font-weight:bold;letter-spacing:0.5px;">Layer Selection</span>
-      <button id="closeLayerControlBtn" style="background:none;border:none;font-size:1.5em;line-height:1;color:#888;cursor:pointer;" title="Close">&times;</button>
-    </div>
-    <div class="layer-content expanded" style="padding:16px 18px 18px 18px; background:#fff; border-radius:0 0 14px 14px;">
+    <div style="background:#fff; border-radius:16px; box-shadow:0 8px 32px rgba(0,0,0,0.22); border:2px solid #888; padding:0;">
+      <div style="padding:18px 18px 10px 18px; background:#fff; border-radius:16px 16px 0 0; border-bottom:1px solid #eee; display:flex;align-items:center;justify-content:space-between;">
+        <span style="font-size:1.3em;font-weight:bold;letter-spacing:0.5px;">Layer Selection</span>
+        <button id="closeLayerControlBtn" style="background:none;border:none;font-size:1.5em;line-height:1;color:#888;cursor:pointer;" title="Close">&times;</button>
+      </div>
+      <div class="layer-content expanded" style="padding:16px 18px 18px 18px; background:#fff; border-radius:0 0 16px 16px;">
       <div class="layer-item">
         <label for="gulliesLayer" class="layer-button" id="gulliesButton" onclick="toggleLayer('gullies')">
           <input type="checkbox" id="gulliesLayer" style="margin-right: 5px;" ${window.map && window.dataLayers.gullies && window.map.hasLayer(window.dataLayers.gullies) ? 'checked' : ''}>
@@ -2732,6 +2733,7 @@ function createLayerControlContainer() {
           Road Lining
         </label>
       </div>
+     </div>
     </div>
   `;
   document.body.appendChild(container);
