--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ body .layer-control, .layer-control, .layer-control * {
       <!-- Header Bar -->
       <div class="d-flex align-items-center justify-content-between px-4 py-3" style="background:#fff;border-bottom:1px solid #eee;">
         <div class="d-flex align-items-center gap-3">
-          <img src="cork-city-council-logo.png" alt="Cork City Council Logo" style="height:48px;width:auto;">
+          <img src="cork-city-council-logo.jpg" alt="Cork City Council Logo" style="height:48px;width:auto;">
           <span style="font-size:1.5rem;font-weight:700;letter-spacing:1px;">CORK CITY COUNCIL</span>
         </div>
         <span style="font-size:1.35rem;font-weight:600;">Asset Management System</span>
