--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
             <div class="mb-3 position-relative">
               <label for="password" class="form-label" style="font-weight:500;">Password</label>
               <input type="password" id="password" placeholder="Password" class="form-control form-control-lg" autocomplete="current-password" style="font-size:1.1rem;">
-              <span class="password-toggle" onclick="togglePassword()" title="Show or hide password" style="position:absolute;right:18px;top:50%;transform:translateY(-50%);cursor:pointer;font-size:1.3rem;color:#888;z-index:2;">
+              <span class="password-toggle" onclick="togglePassword()" title="Show or hide password" style="position:absolute;right:18px;top:50%;transform:translateY(-50%);cursor:pointer;font-size:1.3rem;color:#888;z-index:2;display:flex;align-items:center;height:100%;padding-right:8px;">
                 <i id="passwordToggleIcon" class="bi bi-eye"></i>
               </span>
             </div>
@@ -2754,7 +2754,7 @@ function createLayerControlContainer() {
     <ul class="list-group list-group-flush">
       <li class="list-group-item" onclick="toggleLayer('gullies')">
         <input class="form-check-input" type="checkbox" id="gulliesLayer" ${window.map && window.dataLayers.gullies && window.map.hasLayer(window.dataLayers.gullies) ? 'checked' : ''}>
-        <span class="layer-icon" style="background:#2196F3;border-radius:50%;width:20px;height:20px;"></span>
+        <span class="layer-icon" style="background:#2196F3;border-radius:50%;width:20px;height:20px;border:2px solid #000;"></span>
         Gullies
       </li>
       <li class="list-group-item" onclick="toggleLayer('playgrounds')">
