--- a/index.html
+++ b/index.html
@@ -809,10 +809,10 @@
               <label for="email" class="form-label" style="font-weight:500;">Username</label>
               <input type="email" id="email" placeholder="Username" class="form-control form-control-lg" autocomplete="username" style="font-size:1.1rem;">
             </div>
-            <div class="mb-3 position-relative">
+            <div class="mb-3 position-relative" style="width:100%;">
               <label for="password" class="form-label" style="font-weight:500;">Password</label>
-              <input type="password" id="password" placeholder="Password" class="form-control form-control-lg" autocomplete="current-password" style="font-size:1.1rem;">
-              <span class="password-toggle" onclick="togglePassword()" title="Show or hide password" style="position:absolute;right:18px;top:50%;transform:translateY(-50%);cursor:pointer;font-size:1.3rem;color:#888;z-index:2;display:flex;align-items:center;height:100%;padding-right:8px;">
+              <input type="password" id="password" placeholder="Password" class="form-control form-control-lg" autocomplete="current-password" style="font-size:1.1rem; padding-right: 2.5rem;">
+              <span class="password-toggle" onclick="togglePassword()" title="Show or hide password" style="position:absolute;right:18px;top:50%;transform:translateY(-50%);cursor:pointer;font-size:1.3rem;color:#888;z-index:2;display:flex;align-items:center;height:2.5rem;width:2.5rem;justify-content:center;">
                 <i id="passwordToggleIcon" class="bi bi-eye"></i>
               </span>
             </div>
