--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
               <label for="password" class="form-label" style="font-weight:500;">Password</label>
               <input type="password" id="password" placeholder="Password" class="form-control form-control-lg" autocomplete="current-password" style="font-size:1.1rem; padding-right: 2.5rem;">
               <span class="password-toggle" onclick="togglePassword()" title="Show or hide password" style="position:absolute;right:18px;top:50%;transform:translateY(-50%);cursor:pointer;font-size:1.3rem;color:#888;z-index:2;display:flex;align-items:center;height:2.5rem;width:2.5rem;justify-content:center;">
-                <i id="passwordToggleIcon" class="bi bi-eye"></i>
+                <i id="passwordToggleIcon" class="bi bi-eye" style="margin-top:35px;"></i>
               </span>
             </div>
             <button type="submit" class="btn btn-primary btn-lg w-100 mb-2" style="font-weight:600;font-size:1.15rem;">Sign In</button>
