--- a/index.html
+++ b/index.html
@@ -2741,10 +2741,15 @@ function toggleLayer(layerName) {
 
 function showLayerControl() {
   console.log('showLayerControl: Attempting to show layer control.');
-  const layerControl = document.getElementById('layerControlContainer');
+  let layerControl = document.getElementById('layerControlContainer');
   if (layerControl) {
-    layerControl.style.display = layerControl.style.display === 'block' ? 'none' : 'block';
-    console.log('showLayerControl: Layer control visibility toggled.');
+    // If hidden, show and reset position if needed
+    layerControl.style.display = 'block';
+    if (!layerControl.style.left) layerControl.style.left = '24px';
+    if (!layerControl.style.top) layerControl.style.top = '24px';
+    layerControl.style.position = 'absolute';
+    layerControl.style.zIndex = 3000;
+    console.log('showLayerControl: Layer control made visible.');
   } else {
     // If the container doesn't exist, create it dynamically
     console.log('showLayerControl: Layer control container not found, creating it.');
